# wrapd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
output/: README.txt
samples/: CMakeLists.txt
samples/data/: README.txt
samples/data/botijo/: botijo_handles.txt  botijo_init.node  botijo_nh_soln.ele  botijo_nh_soln.node  botijo_rest.ele  botijo_rest.node
samples/data/cat/: cat_handles.txt  cat_handles_sequential.txt  cat_init.ele  cat_init.node  cat_nh_soln.node  cat_rest.ele  cat_rest.node
samples/data/centaur/: centaur_handles.txt  centaur_handles_sequential.txt  centaur_init.node  centaur_nh_soln.ele  centaur_nh_soln.node  centaur_rest.ele  centaur_rest.node
samples/data/cloth/: cloth_handles.txt
samples/data/dancer/: dancer_handles.txt  dancer_init.node  dancer_nh_soln.ele  dancer_nh_soln.node  dancer_rest.ele  dancer_rest.node
samples/data/dino/: dino_handles.txt  dino_init.ele  dino_init.node  dino_nh_soln.ele  dino_nh_soln.node  dino_rest.node
samples/data/dinoskel/: dinoskel_handles.txt  dinoskel_handles_sequential.txt  dinoskel_init.node  dinoskel_nh_soln.ele  dinoskel_nh_soln.node  dinoskel_rest.ele  dinoskel_rest.node
samples/data/homer/: homer_handles.txt  homer_init.ele  homer_init.node  homer_nh_soln.ele  homer_nh_soln.node  homer_rest.node
samples/data/rabbit/: rabbit_handles.txt  rabbit_handles_sequential.txt  rabbit_init.ele  rabbit_init.node  rabbit_nh_soln.ele  rabbit_nh_soln.node  rabbit_rest.node
samples/data/shear/: shear_handles.txt  shear_init.node  shear_nh_soln.node  shear_rest.node
samples/data/stretch/: stretch_handles.txt  stretch_init.node  stretch_nh_soln.node  stretch_rest.ele  stretch_rest.node
samples/data/untwist/: untwist_handles.txt  untwist_init.ele  untwist_init.node  untwist_nh_soln.node  untwist_rest.node
samples/tests/: CMakeLists.txt  quasi.cpp
samples/utils/: AddMeshes.hpp  DataLog.hpp  MeshIO.hpp  TetMesh.hpp  TriangleMesh.hpp
src/: ADMM.cpp  ADMM.hpp  AlgorithmData.cpp  AlgorithmData.hpp  Elements.hpp  GlobalStepBehavior.hpp  Lame.hpp  Math.hpp  ModelSettings.hpp  RuntimeData.hpp  Settings.cpp  Settings.hpp  Solver.cpp  Solver.hpp  System.cpp  System.hpp  TetElements.cpp  TetElements.hpp
